tests/sources/invalid/generics/generic_constraint_violation_errors.fire
// Explicit generic type arguments that violate a union-of-types constraint.

import @firescript/std.io.println;

fn pick<T: int32 | int64>(x: T, y: T) -> T {
    return x;
}

result: string = pick<string>("a", "b");  //~ ERROR FS-SEM-0010 @18
